1999-06-02  Roland McGrath  <roland@baalperazim.frob.com>

	* ps.h (PSTAT_ENV): New macro.
	(struct proc_stat): New members `env', `env_len', `env_vm_alloced'.
	(proc_stat_env, proc_stat_env_len): New accessor macros.
	(PSTAT_USER_BASE): Increase value to leave more room for additions.
	* procstat.c (proc_stat_set_flags): Handle environment.
	(_proc_stat_free): Likewise.
	* spec.c (ps_get_env, ps_env_getter): New function and constant.
	(specs): New spec "Env" using ps_env_getter and ps_emit_args.

1999-05-29  Roland McGrath  <roland@baalperazim.frob.com>

	* spec.c (ps_emit_past_time, ps_emit_minutes): Fix return type of
	getter fn (int to void).

	* context.c (ps_context_free): Don't call ihash_free on PC->procs
	twice!  Instead, call it on ttys, ttys_by_cttyid, and users.

	* spec.c (ps_get_start_time, ps_start_time_getter): New function and
	constant to report task_basic_info.creation_time time stamp via
	"start_time" spec.
	(specs): Add "Start" fmt for it.

1998-10-19  Roland McGrath  <roland@baalperazim.frob.com>

	* fmt.c (_fmt_create): Add braces to silence gcc warning.
	* procstat.c (summarize_thread_waits): Likewise.
	(proc_stat_set_flags): Likewise.
	(proc_stat_set_flags): Likewise.
	(proc_stat_set_flags): Likewise.

Sat Jun  7 21:35:37 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* spec.c (ps_emit_wait): Provide slightly better abbreviations for
	various port types.

Fri May 23 13:13:18 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* procstat.c (summarize_thread_basic_info): Don't include the
	kernel's idle threads in the summation.
	(summarize_thread_sched_info): Likewise.
	(summarize_thread_states): Likewise.
	(summarize_thread_waits): Likewise.

Fri Feb 28 18:11:28 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* fmt.c (ps_fmt_squash): Deal with FIELD->spec being NULL when
	advancing over a field.

Fri Nov 15 19:14:28 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* procstat.c (proc_stat_set_flags): Allow the user fetch hook to